[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Attila Domokos <adomokos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.4.19"
python-dotenv = "^0.18.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
sqlalchemy-stubs = "^0.4"

[tool.poetry.scripts]
runapp = "sandbox.cli:run"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

